--- a/src/2_create_and_update_index.ipynb
+++ b/src/2_create_and_update_index.ipynb
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "Admin key present? True\n",
-      "Admin key value: 34ZEB9vPTPQc5cl2YgAgEkFmRTVPkjLpD3S3Ry3nIjAzSeANrYzd\n"
+      "Admin key value: \n"
      ]
     }
    ],
